# maidono

./: .gitignore  README.md  maidono.sublime-project  quick-install.sh
core/: Cargo.toml
core/src/: lib.rs
core/src/actions/: action.rs  commands.rs  group.rs  host.rs  mod.rs  refs.rs
core/src/enabled_actions/: dump.rs  load.rs  mod.rs
core/src/utils/: action_path.rs  error.rs  location.rs  macros.rs  mod.rs  path.rs  report.rs
maidctl/: Cargo.toml
maidctl/src/: cli.rs  main.rs  printer.rs
maidctl/src/actions/: display_config.rs  edit_config.rs  mod.rs  systemctl.rs  test.rs
maidctl/src/commands/: display_config.rs  reload.rs
maidono/: Cargo.toml
maidono/src/: fairings.rs  handler.rs  hosts.rs  logger.rs  main.rs  version.rs
maidono/src/execution/: context.rs  mod.rs  runner.rs
maidono/src/payload/: json.rs  mod.rs
maidono/src/security/: hmac.rs  mod.rs
maidono/src/state/: actions.rs  mod.rs
scripts/: install.sh  pack.sh
web/: package-lock.json  package.json  tailwind.config.js
web/src/: App.vue  main.js
