[package]
name = "maidono"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "^0.5.0", features = ["tls", "json"] }
toml = "^0.8.12"
maidono_core = { path = "../core" }
tokio = { version = "^1.41.1", features = ["process"] }
hmac = "0.12.1"
sha2 = "0.10.8"
hex = "0.4.3"
